# WeatherForecast

./: CMakeLists.txt  main.cpp
inc/: Config.txt  Weather.cpp  Weather.h
